# inf-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  audio.cpp  audio.h  bindable.h  color.cpp  color.h  command.h  framebuffer.cpp  framebuffer.h  glmexport.h  globject.cpp  globject.h  inf-cpp.sln  inf-cpp.vcxproj  inf-cpp.vcxproj.filters  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  result.h  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h
demos/demo-dogs/: main.lua
demos/demo-platformer/: config.lua  main.lua
game/: config.lua  main.lua
include/engine/: audio.h  color.h  command.h  framebuffer.h  globject.h  input.h  luatype.h  renderer.h  result.h  shader.h  texture.h
include/glad/: glad.h
src/: audio.cpp  color.cpp  framebuffer.cpp  glad.c  globject.cpp  input.cpp  main.cpp  render_command.cpp  renderer.cpp  shader.cpp  texture.cpp
test/: main.lua
test/demo-snake/: config.lua
